--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="无请求！！"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:maxLines="5"
+        android:ellipsize="end"/>
 </RelativeLayout>
