--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,10 @@
     tools:context="com.example.sunpeng.okhttpdemo.MainActivity">
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btn_load"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="加载数据" />
+        android:text="请求数据" />
 
 
     <TextView
@@ -58,4 +58,29 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="下载"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="取消"/>
+
+        <Button
+            android:id="@+id/btn_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="50dp"
+            android:text="暂停"
+            android:visibility="gone"/>
+
+
+    </LinearLayout>
+
+
 </LinearLayout>
